--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    overflow-y: scroll;
   }
 
   h1 {
@@ -20,6 +21,8 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 1000px;
+    max-height: 100vh;
+    overflow-y: auto;
   }
   
   .input-group {
