--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     flex-basis: 40%;
     text-align: right;
     margin-right: 10px;
+    margin-top: 10px;
     font-weight: bold;
     color: #333;
   }
