--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Helvetica', sans-serif;
     background-color: #f4f7f6;
     margin: 0;
     padding: 0;
@@ -20,7 +20,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
-    max-width: 1000px;
+    max-width: 1080px;
     max-height: 100vh;
     overflow-y: auto;
   }
@@ -89,33 +89,39 @@ body {
   /* Style for the results table */
   #results-table {
     width: 100%;
-    border-collapse: collapse; /* Ensures that column lines are continuous */
-    margin-top: 20px; /* Adds some space above the table */
+    border-collapse: collapse; 
+    margin-top: 20px;
   }
   
   /* Header style */
   #results-table thead th {
-    background-color: #f2f2f2; /* Light grey background for headers */
-    color: #333; /* Dark grey text for contrast */
+    background-color: #f2f2f2; 
+    color: #333; 
     padding: 10px;
-    border-bottom: 1px solid #ddd; /* Separates header from body */
+    border-bottom: 1px solid #ddd; 
   }
   
   /* Style for each table cell */
   #results-table td {
     padding: 10px;
-    text-align: center; /* Center align text in cells */
-    border-left: 1px solid #ddd; /* Adds a line to separate columns */
+    text-align: center; 
+    border-left: 1px solid #ddd; 
     border-right: 1px solid #ddd;
+    font-size: 12px;
   }
   
   /* Style for alternating row colors */
   #results-table tr:nth-child(odd) {
-    background-color: #fff; /* White for odd rows */
+    background-color: #fff;
   }
   
   #results-table tr:nth-child(even) {
-    background-color: #f9f9f9; /* Light grey for even rows */
+    background-color: #f9f9f9;
+  }
+
+  /* Style for alternating row colors */
+  #results-table tr:hover {
+    background-color: #fca350;
   }
   
   /* Style to remove border from the first and last cell to avoid double lines */
@@ -126,7 +132,6 @@ body {
   #results-table td:last-child {
     border-right: none;
   }
-  
   
   /* Style for error message */
   .error-message {
