--- a/style.css
+++ b/style.css
@@ -8,139 +8,210 @@ body {
     align-items: center;
     height: 100vh;
     overflow-y: scroll;
-  }
+}
 
-  h1 {
-    text-align: center;
-  }
-  
-  .container {
-    background-color: #ffffff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 1080px;
-    max-height: 100vh;
-    overflow-y: auto;
-  }
-  
-  .input-group {
-    display: flex;
-    margin-bottom: 15px;
-  }
-  
-  .input-group label {
-    flex-basis: 40%;
-    text-align: right;
-    margin-right: 10px;
-    margin-top: 10px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .input-group input[type="text"],
-  .input-group input[type="number"],
-  .input-group select {
-    flex-basis: 60%;
-    padding: 8px;
-    border: 1px solid #cccccc;
-    border-radius: 4px;
-    font-size: 16px;
-  }
-  
-  /* Enhanced checkboxes layout */
-  .checkbox-group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 15px 0;
-  }
-  
-  .checkbox-group label {
-    margin-right: 20px;
-  }
-  
-  .checkbox-group input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  /* Button container styles */
-  .button-container {
-    text-align: center;
-    margin-top: 20px; /* Adjust the space above the button as needed */
-  }
+h1 {
+  text-align: center;
+}
 
-  button {
-    background-color: #0056b3;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #003d82;
-  }
-  
-  /* Style for the results table */
-  #results-table {
-    width: 100%;
-    border-collapse: collapse; 
-    margin-top: 20px;
-  }
-  
-  /* Header style */
-  #results-table thead th {
-    background-color: #f2f2f2; 
-    color: #333; 
-    padding: 10px;
-    border-bottom: 1px solid #ddd; 
-  }
-  
-  /* Style for each table cell */
-  #results-table td {
-    padding: 10px;
-    text-align: center; 
-    border-left: 1px solid #ddd; 
-    border-right: 1px solid #ddd;
-    font-size: 12px;
-  }
-  
-  /* Style for alternating row colors */
-  #results-table tr:nth-child(odd) {
-    background-color: #fff;
-  }
-  
-  #results-table tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
+.container {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  max-width: 1080px;
+  max-height: 100vh;
+  overflow-y: auto;
+}
 
-  /* Style for alternating row colors */
-  #results-table tr:hover {
-    background-color: #fca350;
-  }
-  
-  /* Style to remove border from the first and last cell to avoid double lines */
-  #results-table td:first-child {
-    border-left: none;
-  }
-  
-  #results-table td:last-child {
-    border-right: none;
-  }
-  
-  /* Style for error message */
-  .error-message {
-    color: #d8000c;
-    background-color: #ffbaba;
-    border: 1px solid;
-    padding: 10px;
-    margin-top: 20px;
-    border-radius: 5px;
-    display: none; /* Hidden by default */
-  }
-  
+.input-group {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.input-group label {
+  flex-basis: 40%;
+  text-align: right;
+  margin-right: 10px;
+  margin-top: 10px;
+  font-weight: bold;
+  color: #333;
+}
+
+.input-group input[type="text"],
+.input-group input[type="number"],
+.input-group select {
+  flex-basis: 60%;
+  padding: 8px;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+/* Enhanced checkboxes layout */
+.checkbox-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.checkbox-group label {
+  margin-right: 20px;
+}
+
+.checkbox-group input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+/* Button container styles */
+.button-container {
+  text-align: center;
+  margin-top: 20px; /* Adjust the space above the button as needed */
+}
+
+button {
+  background-color: #0056b3;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #003d82;
+}
+
+/* Style for the results table */
+#results-table {
+  width: 100%;
+  border-collapse: collapse; 
+  margin-top: 20px;
+}
+
+/* Header style */
+#results-table thead th {
+  background-color: #f2f2f2; 
+  color: #333; 
+  padding: 10px;
+  border-bottom: 1px solid #ddd; 
+}
+
+/* Style for each table cell */
+#results-table td {
+  padding: 10px;
+  text-align: center; 
+  border-left: 1px solid #ddd; 
+  border-right: 1px solid #ddd;
+  font-size: 12px;
+}
+
+/* Style for alternating row colors */
+#results-table tr:nth-child(odd) {
+  background-color: #fff;
+}
+
+#results-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* Style for alternating row colors */
+#results-table tr:hover {
+  background-color: #fca350;
+}
+
+/* Style to remove border from the first and last cell to avoid double lines */
+#results-table td:first-child {
+  border-left: none;
+}
+
+#results-table td:last-child {
+  border-right: none;
+}
+
+/* Style for error message */
+.error-message {
+  color: #d8000c;
+  background-color: #ffbaba;
+  border: 1px solid;
+  padding: 10px;
+  margin-top: 20px;
+  border-radius: 5px;
+  display: none; /* Hidden by default */
+}
+
+/* Modal*/
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.modal-table thead th {
+  background-color: #f2f2f2; 
+  color: #333; 
+  padding: 10px;
+  border-bottom: 1px solid #ddd; 
+}
+
+.modal-table td {
+  padding: 10px;
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
+/* Form styles, if needed */
+#pension-options-form {
+  margin-top: 20px;
+}
+
+#pension-options-form .checkbox-group {
+  margin: 15px 0;
+}
+
+#pension-options-forn .input-group {
+  margin: 15px 0;  
+}
+
+#calculationsTable {
+  display: none;
+}
