--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ button:hover {
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 50%;
+  max-width: 500px;
 }
 
 .close {
