Fixed NaN error if bonus or bonus % left blank

--- a/style.css
+++ b/style.css
@@ -31,22 +31,30 @@ h1 {
 }
 
 .input-group label {
-  flex-basis: 40%;
+  flex-basis: 25%;
   text-align: right;
   margin-right: 10px;
   margin-top: 10px;
   font-weight: bold;
+  font-size: 14px;
   color: #333;
 }
 
 .input-group input[type="text"],
 .input-group input[type="number"],
 .input-group select {
-  flex-basis: 60%;
+  flex-basis: 50%;
   padding: 8px;
   border: 1px solid #cccccc;
   border-radius: 4px;
   font-size: 16px;
+}
+
+/* Style for error message */
+.error-message {
+  flex-basis: 25%;
+  color: #d8000c;
+  /* display: none; */
 }
 
 /* Enhanced checkboxes layout */
@@ -97,6 +105,7 @@ button:hover {
 #results-table thead th {
   background-color: #f2f2f2; 
   color: #333; 
+  font-size: 14px;
   padding: 10px;
   border-bottom: 1px solid #ddd; 
 }
@@ -131,17 +140,6 @@ button:hover {
 
 #results-table td:last-child {
   border-right: none;
-}
-
-/* Style for error message */
-.error-message {
-  color: #d8000c;
-  background-color: #ffbaba;
-  border: 1px solid;
-  padding: 10px;
-  margin-top: 20px;
-  border-radius: 5px;
-  display: none; /* Hidden by default */
 }
 
 /* Modal*/
